api/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-msc-svc
spec:
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: pokemon-msc
