api/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pokemon(/|$)
            pathType: Prefix
            backend:
              service:
                name: pokemon-msc-svc
                port:
                  number: 80
